# DR4DNA

./: .dockerignore  .gitignore  .gitmodules  CustomExceptions.py  Dockerfile  Dorn_Fri_Oct__7_14_41_17_2022.ini  Dorn_Mon_Oct_10_10_45_15_2022.ini  Dorn_RU10.fasta  Kaitai2Html.py  README.md  a.bmp_Mon_Nov__7_12_21_58_2022.ini  a.bmp_RU10.fasta  a.bmp_Tue_Nov__8_14_54_54_2022.ini  app.py  app_callbacks.py  box.bmp_RU10_282.fasta  box.bmp_Thu_Mar_30_11_28_21_2023_282.ini  config.py  requirements.txt  semi_automatic_reconstruction_toolkit.py  setup.cfg  setup.py
analysis/: CountRequiredAnalysis.py  exp_04_04_2023_15_27_52.csv  exp_04_04_2023_15_31_33.csv  exp_06_04_2023_10_17_28.csv  exp_08_04_2023_03_07_11.csv  exp_12_04_2023_13_41_52.csv  exp_13_04_2023_10_07_00.csv  exp_13_04_2023_20_10_54.csv  exp_17_04_2023_15_48_16.csv  exp_17_04_2023_18_30_01.csv  exp_17_04_2023_21_32_01.csv  merged.csv  norec_analysis.py  output_sp_170.csv  output_sp_331.csv  overhead_vs_non_critical_packets.py  sleeping_beauty
api/: main_page.py
assets/: custom.css  custom_js.js
eval/: Cornell_box_radiosity_small.bmp_Fri_Mar_31_12_58_30_2023_120.ini  Cornell_box_radiosity_small.bmp_Fri_Mar_31_13_03_05_2023_40.ini  Cornell_box_radiosity_small.bmp_Fri_Mar_31_13_12_25_2023_282.ini  Cornell_box_radiosity_small.bmp_RU10.fasta  Cornell_box_radiosity_small.bmp_RU10_120.ini  Cornell_box_radiosity_small.bmp_RU10_40.fasta  Cornell_box_radiosity_small.bmp_RU10_40.ini  Dorn276_A_assembled_constraint_repaired.fasta  Dorn3_DNA_Aeon.ini  Dorn3_Thu_Feb_24_10_09_28_2022.ini  Dorn5_DNA_Aeon.ini  Dorn5_Thu_Feb_24_10_14_38_2022.ini  Dorn_RU10_multi_error.fasta  Dorn_RU10_multi_error.ini  Dorn_Wed_May_31_14_14_06_2023.ini  MESA.fasta  MESA.fastq  NOREC4DNA_17.zip_Mon_May_22_16_06_41_2023.ini  NOREC4DNA_17.zip_RU10.fasta  NOREC4DNA_17.zip_RU10_mutated.fasta  NOREC4DNA_17.zip_mutated.ini  README.md  RU10_Dorn_single_auto_repair.ini  a.bmp_RU10_multiple_errors_auto_repair.fasta  a.bmp_RU10_multiple_errors_auto_repair.ini  c.bmp_RU10.fasta  dorn.json  (+53 more)
(+35 files in other folders)
