[metadata]
name = SARweb
#version = 0.1
author = Michael Schwarz
url = https://gitlab.com/umr-ds/sarweb
description = TODO
long_description = TODO #file: ReadMe.md
keywords = norec4dna, dna storage, parser, kaitai
license = TODO
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	Intended Audience :: Researchers
	Operating System :: OS Independent

[options]
include_package_data = True
zip_safe = True
packages = sarweb
setup_requires = setuptools_scm; kaitaiStructCompile @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.py#egg=kaitaiStructCompile;
install_requires =
	kaitaistruct @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.py#egg=kaitaistruct
	numpy

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel", "kaitaiStructCompile @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.py#egg=kaitaiStructCompile"]

