[metadata]
name = DR4DNA
version = 1.0.0
author = Michael Schwarz
url = https://gitlab.com/umr-ds/DR4DNA
description = TODO
long_description = file: ReadMe.md
keywords = norec4dna, dna storage, parser, kaitai
license = AGPL-3.0-or-later
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Environment :: Other Environment
	Intended Audience :: Developers
	Intended Audience :: Researchers
	Operating System :: OS Independent

[options]
include_package_data = True
zip_safe = True
packages = dr4dna
setup_requires = setuptools_scm; kaitaiStructCompile @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.py#egg=kaitaiStructCompile;
install_requires =
	numpy

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel", "kaitaiStructCompile @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.py#egg=kaitaiStructCompile"]

